--- a/html_reports/03_scores_by_journal_figure.html
+++ b/html_reports/03_scores_by_journal_figure.html
@@ -219,6 +219,9 @@ library(devtools)
 library(ggplot2)
 </code></pre>
 
+<pre><code>## Warning: package &#39;ggplot2&#39; was built under R version 3.4.4
+</code></pre>
+
 <p>Clear environment and set seed</p>
 
 <pre><code class="r">remove(list=ls())
@@ -339,16 +342,16 @@ plottingdata$lower &lt;- plottingdata$Score - plottingdata$SD
 
 <p>Compile raw data in long format</p>
 
-<pre><code class="r">testdata1 &lt;- averages[,c(&quot;studyID&quot;, &quot;graphsReproduced&quot;, &quot;journal&quot;)]
-testdata2 &lt;- averages[,c(&quot;studyID&quot;, &quot;numbersReproduced&quot;, &quot;journal&quot;)]
-testdata3 &lt;- averages[,c(&quot;studyID&quot;, &quot;conclusionsReproduced&quot;, &quot;journal&quot;)]
-colnames(testdata1) &lt;- 
-  colnames(testdata2) &lt;- 
-  colnames(testdata3) &lt;- c(&quot;studyID&quot;, &quot;Score&quot;, &quot;journal&quot;)
-testdata1$Category &lt;- &quot;Figures&quot;
-testdata2$Category &lt;- &quot;Numbers&quot;
-testdata3$Category &lt;- &quot;Conclusions&quot;
-plottingdata.long &lt;- rbind(testdata1, testdata2, testdata3)
+<pre><code class="r">tempdata1 &lt;- averages[,c(&quot;studyID&quot;, &quot;graphsReproduced&quot;, &quot;journal&quot;)]
+tempdata2 &lt;- averages[,c(&quot;studyID&quot;, &quot;numbersReproduced&quot;, &quot;journal&quot;)]
+tempdata3 &lt;- averages[,c(&quot;studyID&quot;, &quot;conclusionsReproduced&quot;, &quot;journal&quot;)]
+colnames(tempdata1) &lt;- 
+  colnames(tempdata2) &lt;- 
+  colnames(tempdata3) &lt;- c(&quot;studyID&quot;, &quot;Score&quot;, &quot;journal&quot;)
+tempdata1$Category &lt;- &quot;Figures&quot;
+tempdata2$Category &lt;- &quot;Numbers&quot;
+tempdata3$Category &lt;- &quot;Conclusions&quot;
+plottingdata.long &lt;- rbind(tempdata1, tempdata2, tempdata3)
 </code></pre>
 
 <hr/>
@@ -393,7 +396,7 @@ plottingdata.long &lt;- rbind(testdata1, testdata2, testdata3)
 ##  collate  English_United States.1252  
 ##  ctype    English_United States.1252  
 ##  tz       America/Chicago             
-##  date     2019-04-16                  
+##  date     2019-06-03                  
 ## 
 ## - Packages --------------------------------------------------------------
 ##  package     * version date       lib source        
@@ -420,7 +423,9 @@ plottingdata.long &lt;- rbind(testdata1, testdata2, testdata3)
 ##  labeling      0.3     2014-08-23 [1] CRAN (R 3.4.1)
 ##  lazyeval      0.2.1   2017-10-29 [1] CRAN (R 3.4.4)
 ##  magrittr      1.5     2014-11-22 [1] CRAN (R 3.4.3)
+##  markdown      0.9     2018-12-07 [1] CRAN (R 3.4.4)
 ##  memoise       1.1.0   2017-04-21 [1] CRAN (R 3.4.4)
+##  mime          0.6     2018-10-05 [1] CRAN (R 3.4.4)
 ##  munsell       0.5.0   2018-06-12 [1] CRAN (R 3.4.4)
 ##  pillar        1.3.0   2018-07-14 [1] CRAN (R 3.4.4)
 ##  pkgbuild      1.0.2   2018-10-16 [1] CRAN (R 3.4.4)
@@ -439,7 +444,6 @@ plottingdata.long &lt;- rbind(testdata1, testdata2, testdata3)
 ##  remotes       2.0.2   2018-10-30 [1] CRAN (R 3.4.4)
 ##  rlang         0.3.0.1 2018-10-25 [1] CRAN (R 3.4.4)
 ##  rprojroot     1.3-2   2018-01-03 [1] CRAN (R 3.4.4)
-##  rstudioapi    0.8     2018-10-02 [1] CRAN (R 3.4.4)
 ##  scales        1.0.0   2018-08-09 [1] CRAN (R 3.4.4)
 ##  sessioninfo   1.1.1   2018-11-05 [1] CRAN (R 3.4.4)
 ##  stringi       1.2.4   2018-07-20 [1] CRAN (R 3.4.4)
