--- a/html_reports/04_reproducibility_criteria_figure.html
+++ b/html_reports/04_reproducibility_criteria_figure.html
@@ -690,7 +690,7 @@ plottingdata$upper &lt;- ifelse(test = plottingdata$upper &gt; 5, yes = 5, no = 
 ##  collate  English_United States.1252  
 ##  ctype    English_United States.1252  
 ##  tz       America/Chicago             
-##  date     2019-04-25                  
+##  date     2019-06-03                  
 ## 
 ## - Packages --------------------------------------------------------------
 ##  package     * version date       lib source        
@@ -717,7 +717,9 @@ plottingdata$upper &lt;- ifelse(test = plottingdata$upper &gt; 5, yes = 5, no = 
 ##  labeling      0.3     2014-08-23 [1] CRAN (R 3.4.1)
 ##  lazyeval      0.2.1   2017-10-29 [1] CRAN (R 3.4.4)
 ##  magrittr      1.5     2014-11-22 [1] CRAN (R 3.4.3)
+##  markdown      0.9     2018-12-07 [1] CRAN (R 3.4.4)
 ##  memoise       1.1.0   2017-04-21 [1] CRAN (R 3.4.4)
+##  mime          0.6     2018-10-05 [1] CRAN (R 3.4.4)
 ##  munsell       0.5.0   2018-06-12 [1] CRAN (R 3.4.4)
 ##  pillar        1.3.0   2018-07-14 [1] CRAN (R 3.4.4)
 ##  pkgbuild      1.0.2   2018-10-16 [1] CRAN (R 3.4.4)
@@ -736,7 +738,6 @@ plottingdata$upper &lt;- ifelse(test = plottingdata$upper &gt; 5, yes = 5, no = 
 ##  remotes       2.0.2   2018-10-30 [1] CRAN (R 3.4.4)
 ##  rlang         0.3.0.1 2018-10-25 [1] CRAN (R 3.4.4)
 ##  rprojroot     1.3-2   2018-01-03 [1] CRAN (R 3.4.4)
-##  rstudioapi    0.8     2018-10-02 [1] CRAN (R 3.4.4)
 ##  scales        1.0.0   2018-08-09 [1] CRAN (R 3.4.4)
 ##  sessioninfo   1.1.1   2018-11-05 [1] CRAN (R 3.4.4)
 ##  stringi       1.2.4   2018-07-20 [1] CRAN (R 3.4.4)
