--- a/html_reports/01_data_processing.html
+++ b/html_reports/01_data_processing.html
@@ -214,24 +214,8 @@ hr {
 <p>Load libraries</p>
 
 <pre><code class="r">library(ezknitr)
-</code></pre>
-
-<pre><code>## Warning: package &#39;ezknitr&#39; was built under R version 3.4.4
-</code></pre>
-
-<pre><code class="r">library(knitr)
-</code></pre>
-
-<pre><code>## Warning: package &#39;knitr&#39; was built under R version 3.4.4
-</code></pre>
-
-<pre><code class="r">library(devtools)
-</code></pre>
-
-<pre><code>## Warning: package &#39;devtools&#39; was built under R version 3.4.4
-</code></pre>
-
-<pre><code>## Warning: package &#39;usethis&#39; was built under R version 3.4.4
+library(knitr)
+library(devtools)
 </code></pre>
 
 <p>Clear environment and set seed</p>
@@ -271,9 +255,8 @@ str(raw_data)
 
 <h2>Fill in missing data</h2>
 
-<h3>The question &ldquo;Was this study reviewed?&rdquo; was added after a few survey</h3>
-
-<p>responses were filled in, so I will update those records with &ldquo;TRUE&rdquo;</p>
+<p><strong>The question &ldquo;Was this study reviewed?&rdquo; was added after a few survey
+ responses were filled in, so I will update those records with &ldquo;TRUE&rdquo;</strong></p>
 
 <p>View responses to this column</p>
 
@@ -325,7 +308,7 @@ str(raw_data)
 
 <h2>Why weren&#39;t studies reviewed?</h2>
 
-<h3>Create and fill out a new column for &ldquo;Why not reviewed&rdquo;</h3>
+<p><strong>Create and fill out a new column for &ldquo;Why not reviewed&rdquo;</strong></p>
 
 <pre><code class="r">raw_data$Why.not.reviewed &lt;- NA
 </code></pre>
@@ -393,25 +376,26 @@ files wsb038 as &ldquo;False, for other reasons not stated above&rdquo;</p>
 <li>jwm036: not enough time to prepare data, <em>noteably, author states the study is not reproducible</em></li>
 </ul>
 
-<pre><code class="r">new_data$Why.not.reviewed &lt;- ifelse(test = 
-                                      new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;jwm003&quot; |
-                                      new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb039&quot; |
-                                      new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb037&quot; |
-                                      new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb001&quot;,
-                                    yes = &quot;Author Declined: Proprietary/confidential data&quot;, 
-                                    no = ifelse(test = 
-                                                  new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;jwm005&quot; |
-                                                  new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;jwm031&quot;,
-                                                yes = &quot;Author Declined: No reason given&quot;,
-                                                no = ifelse(test = 
-                                                              new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;jwm011&quot; |
-                                                              new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb005&quot; |
-                                                              new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;jwm036&quot;,
-                                                            yes = &quot;Author Declined: Not enough time&quot;,
-                                                            no = ifelse(test = new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;jwm016&quot;,
-                                                                        yes = &quot;Author Declined: Data saved for future article&quot;,
-                                                                        no = new_data$Why.not.reviewed))
-                                    ))
+<pre><code class="r">new_data$Why.not.reviewed &lt;- 
+  ifelse(test = 
+           new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;jwm003&quot; |
+           new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb039&quot; |
+           new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb037&quot; |
+           new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb001&quot;,
+         yes = &quot;Author Declined: Proprietary/confidential data&quot;, 
+         no = ifelse(test = 
+                       new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;jwm005&quot; |
+                       new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;jwm031&quot;,
+                     yes = &quot;Author Declined: No reason given&quot;,
+                     no = ifelse(test = 
+                                   new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;jwm011&quot; |
+                                   new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb005&quot; |
+                                   new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;jwm036&quot;,
+                                 yes = &quot;Author Declined: Not enough time&quot;,
+                                 no = ifelse(test = new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;jwm016&quot;,
+                                             yes = &quot;Author Declined: Data saved for future article&quot;,
+                                             no = new_data$Why.not.reviewed))
+         ))
 </code></pre>
 
 <h3>Track down reasons for &ldquo;False, for other reasons not stated above&rdquo;</h3>
@@ -435,18 +419,19 @@ files wsb038 as &ldquo;False, for other reasons not stated above&rdquo;</p>
 <li>jwm038: unable to find email for author, incorrectly coded: Should have been &ldquo;No correspondence&rdquo;</li>
 </ul>
 
-<pre><code class="r">new_data$Why.not.reviewed &lt;- ifelse(test = 
-                                      new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb020&quot;, 
-                                    yes = &quot;Author Declined: Proprietary/confidential data&quot;,
-                                    no = ifelse(test = 
-                                                  new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb029&quot; |
-                                                  new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;jwm038&quot;,
-                                                yes = &quot;No correspondence&quot;,
-                                                no = ifelse(test = 
-                                                              new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb007&quot; |
-                                                              new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb027&quot;,
-                                                            yes = &quot;Author wanted to participate, but did not send data&quot;,
-                                                            no = new_data$Why.not.reviewed)))
+<pre><code class="r">new_data$Why.not.reviewed &lt;- 
+  ifelse(test = 
+           new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb020&quot;, 
+         yes = &quot;Author Declined: Proprietary/confidential data&quot;,
+         no = ifelse(test = 
+                       new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb029&quot; |
+                       new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;jwm038&quot;,
+                     yes = &quot;No correspondence&quot;,
+                     no = ifelse(test = 
+                                   new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb007&quot; |
+                                   new_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb027&quot;,
+                                 yes = &quot;Author wanted to participate, but did not send data&quot;,
+                                 no = new_data$Why.not.reviewed)))
 </code></pre>
 
 <p>Look at results</p>
@@ -545,16 +530,19 @@ summary(reviewed_data$Were.the.study.s.figures.reproduced..)
 
 <p>For one of these studies with NAs, there were no figures, so I will replace with a &ldquo;99&rdquo;</p>
 
-<pre><code class="r">reviewed_data$Were.the.study.s.figures.reproduced..[reviewed_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb018&quot;] &lt;- 99
+<pre><code class="r">reviewed_data$Were.the.study.s.figures.reproduced..[
+  reviewed_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb018&quot;] &lt;- 99
 </code></pre>
 
 <p>For another of these studies, the study was completely unreproducible, so the 
 reviewer erroneously didn&#39;t answer these questions. These should have been &ldquo;1s&rdquo;</p>
 
-<pre><code class="r">reviewed_data$Were.the.study.s.figures.reproduced..[reviewed_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb008&quot;] &lt;- 1
+<pre><code class="r">reviewed_data$Were.the.study.s.figures.reproduced..[
+  reviewed_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb008&quot;] &lt;- 1
 reviewed_data$Were.the.numbers.in.the.study.s.tables.and.or.results.text.quantitatively.reproduced..[
   reviewed_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb008&quot;] &lt;- 1
-reviewed_data$Were.the.study.s.conclusions.reproduced..[reviewed_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb008&quot;] &lt;- 1
+reviewed_data$Were.the.study.s.conclusions.reproduced..[
+  reviewed_data$Study.ID..e.g...wsb002.or.jwm040. == &quot;wsb008&quot;] &lt;- 1
 </code></pre>
 
 <p>Summarize information by reviewed study with a for-loop</p>
@@ -626,11 +614,9 @@ for(ss in 1:length(study_names)){
 ## [1] &quot;jwm027 error: open source formats&quot;
 </code></pre>
 
-<h3>Fix anomolies listed above:</h3>
+<h2>Fix anomolies listed above:</h2>
 
-<ol>
-<li>Data was readily available </li>
-</ol>
+<h3>1. Data was readily available</h3>
 
 <p>Data was sent by author so &ldquo;was data readily available&rdquo; should be &ldquo;False&rdquo;</p>
 
@@ -656,9 +642,7 @@ for(ss in 1:length(study_names)){
 )
 </code></pre>
 
-<ol>
-<li>Was code available?</li>
-</ol>
+<h3>2. Was code available?</h3>
 
 <p>For jwm022 and wsb008, code actually was available</p>
 
@@ -676,9 +660,7 @@ for(ss in 1:length(study_names)){
   ))
 </code></pre>
 
-<ol>
-<li>Analysis was entirely code based</li>
-</ol>
+<h3>3. Analysis was entirely code based</h3>
 
 <p>Actually true for wsb035, jwm010, wsb006, wsb023, jwm024 and jwm028</p>
 
@@ -693,9 +675,7 @@ for(ss in 1:length(study_names)){
   no = reviewed_data$Analysis.was.entirely.code.based)
 </code></pre>
 
-<ol>
-<li>Data was pre-processed</li>
-</ol>
+<h3>4. Data was pre-processed</h3>
 
 <p>True for wsb004 and wsb010, but raw data for jwm010, wsb006, jwm022</p>
 
@@ -713,9 +693,7 @@ for(ss in 1:length(study_names)){
   ))
 </code></pre>
 
-<ol>
-<li>Can code be run as is?</li>
-</ol>
+<h3>5. Can code be run as is?</h3>
 
 <p>Make sure this is &ldquo;NA&rdquo; for studies without code provided</p>
 
@@ -731,15 +709,13 @@ on survey:</p>
 <p>The rest are just from where there are slight ranking changes between both 
 reviewers, so they&#39;ll be averaged out in the next step</p>
 
-<ol>
-<li><p>Update whether open source formats were used</p>
+<h3>6. Update whether open source formats were used</h3>
 
 <p>Studies jwm019, wsb006, wsb010, wsb014, jwm027 used open source formats
-like csv, R, unmarked, etc.</p>
+ like csv, R, unmarked, etc.</p>
 
 <p>Studies wsb013, wsb018, jwm004 used proprietary formats like JMP, ArcGIS,
-and Excel</p></li>
-</ol>
+ and Excel</p>
 
 <pre><code class="r">open &lt;-  c(&quot;jwm019&quot;, &quot;wsb006&quot;, &quot;wsb010&quot;, &quot;wsb014&quot;, &quot;jwm027&quot;)
 proprietary &lt;- c(&quot;wsb013&quot;, &quot;wsb018&quot;, &quot;jwm004&quot;)
@@ -747,28 +723,35 @@ proprietary &lt;- c(&quot;wsb013&quot;, &quot;wsb018&quot;, &quot;jwm004&quot;)
 
 <p>Update discrepancies</p>
 
-<pre><code class="r">reviewed_data$Open.source.file.formats.used.[reviewed_data$Study.ID..e.g...wsb002.or.jwm040. %in% open] &lt;- 
+<pre><code class="r">reviewed_data$Open.source.file.formats.used.[
+  reviewed_data$Study.ID..e.g...wsb002.or.jwm040. %in% open] &lt;- 
   &quot;True&quot;
-reviewed_data$Open.source.file.formats.used.[reviewed_data$Study.ID..e.g...wsb002.or.jwm040. %in% proprietary] &lt;- 
+reviewed_data$Open.source.file.formats.used.[
+  reviewed_data$Study.ID..e.g...wsb002.or.jwm040. %in% proprietary] &lt;- 
   &quot;False&quot;
 </code></pre>
 
-<h3>Average numerical results and simultaneously check for errors</h3>
+<h2>Average numerical results and simultaneously check for errors</h2>
 
 <p>New dataset for averaged data</p>
 
-<pre><code class="r">averages &lt;- as.data.frame(matrix(NA, ncol = 6, nrow = length(study_names)))
-colnames(averages) &lt;- c(&quot;studyID&quot;, &quot;graphsReproduced&quot;, &quot;numbersReproduced&quot;, &quot;conclusionsReproduced&quot;, &quot;codeRunsAsIs&quot;, &quot;journal&quot;)
+<pre><code class="r">averages &lt;- 
+  as.data.frame(matrix(NA, ncol = 6, nrow = length(study_names)))
+colnames(averages) &lt;- 
+  c(&quot;studyID&quot;, &quot;graphsReproduced&quot;, &quot;numbersReproduced&quot;, 
+    &quot;conclusionsReproduced&quot;, &quot;codeRunsAsIs&quot;, &quot;journal&quot;)
 </code></pre>
 
 <pre><code class="r">for(ss in 1:length(study_names)){
-  subsetdata &lt;- reviewed_data[reviewed_data$Study.ID..e.g...wsb002.or.jwm040.==study_names[ss],]
+  subsetdata &lt;- 
+    reviewed_data[reviewed_data$Study.ID..e.g...wsb002.or.jwm040.==study_names[ss],]
 
   # Check for disagreements amongst answers
   if(length(unique(subsetdata[,&quot;Data.readily.available.&quot;]))&gt;=2){
     print(paste(study_names[ss], &quot;error: data readily available&quot;))
   }
-  if(length(unique(subsetdata[,&quot;Was.the.data.pre.processed.or.shared.in.original.raw.format.&quot; ]))&gt;=2){
+  if(length(unique(subsetdata[
+    ,&quot;Was.the.data.pre.processed.or.shared.in.original.raw.format.&quot; ]))&gt;=2){
     print(paste(study_names[ss], &quot;error: was data pre processed&quot;))
   }
   if(length(unique(subsetdata[,&quot;Code.available&quot; ]))&gt;=2){
@@ -780,9 +763,10 @@ colnames(averages) &lt;- c(&quot;studyID&quot;, &quot;graphsReproduced&quot;, &q
 
   # Average over numerical responses
   averages$studyID[ss] &lt;- study_names[ss]
-  averages$graphsReproduced[ss] &lt;- ifelse(study_names[ss] == &quot;wsb018&quot;,
-                                          yes = NA,
-                                          no = mean(subsetdata$Were.the.study.s.figures.reproduced.., na.rm = T))
+  averages$graphsReproduced[ss] &lt;- 
+    ifelse(study_names[ss] == &quot;wsb018&quot;,
+           yes = NA,
+           no = mean(subsetdata$Were.the.study.s.figures.reproduced.., na.rm = T))
   averages$numbersReproduced[ss] &lt;- 
     mean(subsetdata$Were.the.numbers.in.the.study.s.tables.and.or.results.text.quantitatively.reproduced..)
   averages$conclusionsReproduced[ss] &lt;- 
@@ -886,25 +870,40 @@ save(new_data, file = &quot;data/processed_data/all_studies_data.Rdata&quot;)
 ##  package     * version date       lib source        
 ##  assertthat    0.2.0   2017-04-11 [1] CRAN (R 3.4.4)
 ##  backports     1.1.2   2017-12-13 [1] CRAN (R 3.4.4)
+##  bindr         0.1.1   2018-03-13 [1] CRAN (R 3.4.4)
+##  bindrcpp      0.2.2   2018-03-29 [1] CRAN (R 3.4.4)
 ##  callr         3.1.0   2018-12-10 [1] CRAN (R 3.4.4)
 ##  cli           1.0.1   2018-09-25 [1] CRAN (R 3.4.4)
+##  colorspace    1.3-2   2016-12-14 [1] CRAN (R 3.4.4)
 ##  crayon        1.3.4   2017-09-16 [1] CRAN (R 3.4.4)
 ##  desc          1.2.0   2018-05-01 [1] CRAN (R 3.4.4)
 ##  devtools    * 2.0.1   2018-10-26 [1] CRAN (R 3.4.4)
 ##  digest        0.6.18  2018-10-10 [1] CRAN (R 3.4.4)
+##  dplyr         0.7.8   2018-11-10 [1] CRAN (R 3.4.4)
 ##  evaluate      0.12    2018-10-09 [1] CRAN (R 3.4.4)
 ##  ezknitr     * 0.6     2016-09-16 [1] CRAN (R 3.4.4)
 ##  fs            1.2.6   2018-08-23 [1] CRAN (R 3.4.4)
+##  ggplot2     * 3.1.0   2018-10-25 [1] CRAN (R 3.4.4)
 ##  glue          1.3.0   2018-07-17 [1] CRAN (R 3.4.4)
+##  gtable        0.2.0   2016-02-26 [1] CRAN (R 3.4.4)
 ##  highr         0.7     2018-06-09 [1] CRAN (R 3.4.4)
 ##  knitr       * 1.21    2018-12-10 [1] CRAN (R 3.4.4)
+##  labeling      0.3     2014-08-23 [1] CRAN (R 3.4.1)
+##  lazyeval      0.2.1   2017-10-29 [1] CRAN (R 3.4.4)
 ##  magrittr      1.5     2014-11-22 [1] CRAN (R 3.4.3)
+##  markdown      0.9     2018-12-07 [1] CRAN (R 3.4.4)
 ##  memoise       1.1.0   2017-04-21 [1] CRAN (R 3.4.4)
+##  mime          0.6     2018-10-05 [1] CRAN (R 3.4.4)
+##  munsell       0.5.0   2018-06-12 [1] CRAN (R 3.4.4)
+##  pillar        1.3.0   2018-07-14 [1] CRAN (R 3.4.4)
 ##  pkgbuild      1.0.2   2018-10-16 [1] CRAN (R 3.4.4)
+##  pkgconfig     2.0.2   2018-08-16 [1] CRAN (R 3.4.4)
 ##  pkgload       1.0.2   2018-10-29 [1] CRAN (R 3.4.4)
+##  plyr          1.8.4   2016-06-08 [1] CRAN (R 3.4.4)
 ##  prettyunits   1.0.2   2015-07-13 [1] CRAN (R 3.4.4)
 ##  processx      3.2.1   2018-12-05 [1] CRAN (R 3.4.4)
 ##  ps            1.2.1   2018-11-06 [1] CRAN (R 3.4.4)
+##  purrr         0.2.5   2018-05-29 [1] CRAN (R 3.4.4)
 ##  R.methodsS3   1.7.1   2016-02-16 [1] CRAN (R 3.4.1)
 ##  R.oo          1.22.0  2018-04-22 [1] CRAN (R 3.4.4)
 ##  R.utils       2.7.0   2018-08-27 [1] CRAN (R 3.4.4)
@@ -913,10 +912,13 @@ save(new_data, file = &quot;data/processed_data/all_studies_data.Rdata&quot;)
 ##  remotes       2.0.2   2018-10-30 [1] CRAN (R 3.4.4)
 ##  rlang         0.3.0.1 2018-10-25 [1] CRAN (R 3.4.4)
 ##  rprojroot     1.3-2   2018-01-03 [1] CRAN (R 3.4.4)
+##  scales        1.0.0   2018-08-09 [1] CRAN (R 3.4.4)
 ##  sessioninfo   1.1.1   2018-11-05 [1] CRAN (R 3.4.4)
 ##  stringi       1.2.4   2018-07-20 [1] CRAN (R 3.4.4)
 ##  stringr       1.3.1   2018-05-10 [1] CRAN (R 3.4.4)
 ##  testthat      2.0.1   2018-10-13 [1] CRAN (R 3.4.4)
+##  tibble        1.4.2   2018-01-22 [1] CRAN (R 3.4.4)
+##  tidyselect    0.2.5   2018-10-11 [1] CRAN (R 3.4.4)
 ##  usethis     * 1.4.0   2018-08-14 [1] CRAN (R 3.4.4)
 ##  withr         2.1.2   2018-03-15 [1] CRAN (R 3.4.4)
 ##  xfun          0.4     2018-10-23 [1] CRAN (R 3.4.4)
