--- a/html_reports/02_study_overview_figure.html
+++ b/html_reports/02_study_overview_figure.html
@@ -203,7 +203,8 @@ hr {
 <body>
 <h1>Figure 1 Data</h1>
 
-<p>Description: Data on overall fate of all 80 studies for Figure 1 of paper</p>
+<p>Description: Data on overall fate of all 80 studies for Figure 1 of paper. Figure
+1 was made with Adobe Illustrator using the following data.</p>
 
 <p>Coder name(s): Althea ArchMiller</p>
 
@@ -366,26 +367,40 @@ load(file = &quot;data/processed_data/all_studies_data.Rdata&quot;)
 ##  package     * version date       lib source        
 ##  assertthat    0.2.0   2017-04-11 [1] CRAN (R 3.4.4)
 ##  backports     1.1.2   2017-12-13 [1] CRAN (R 3.4.4)
+##  bindr         0.1.1   2018-03-13 [1] CRAN (R 3.4.4)
+##  bindrcpp      0.2.2   2018-03-29 [1] CRAN (R 3.4.4)
 ##  callr         3.1.0   2018-12-10 [1] CRAN (R 3.4.4)
 ##  cli           1.0.1   2018-09-25 [1] CRAN (R 3.4.4)
+##  colorspace    1.3-2   2016-12-14 [1] CRAN (R 3.4.4)
 ##  crayon        1.3.4   2017-09-16 [1] CRAN (R 3.4.4)
 ##  desc          1.2.0   2018-05-01 [1] CRAN (R 3.4.4)
 ##  devtools    * 2.0.1   2018-10-26 [1] CRAN (R 3.4.4)
 ##  digest        0.6.18  2018-10-10 [1] CRAN (R 3.4.4)
+##  dplyr         0.7.8   2018-11-10 [1] CRAN (R 3.4.4)
 ##  evaluate      0.12    2018-10-09 [1] CRAN (R 3.4.4)
 ##  ezknitr     * 0.6     2016-09-16 [1] CRAN (R 3.4.4)
 ##  fs            1.2.6   2018-08-23 [1] CRAN (R 3.4.4)
+##  ggplot2     * 3.1.0   2018-10-25 [1] CRAN (R 3.4.4)
 ##  glue          1.3.0   2018-07-17 [1] CRAN (R 3.4.4)
+##  gtable        0.2.0   2016-02-26 [1] CRAN (R 3.4.4)
 ##  highr         0.7     2018-06-09 [1] CRAN (R 3.4.4)
 ##  knitr       * 1.21    2018-12-10 [1] CRAN (R 3.4.4)
+##  labeling      0.3     2014-08-23 [1] CRAN (R 3.4.1)
+##  lazyeval      0.2.1   2017-10-29 [1] CRAN (R 3.4.4)
 ##  magrittr      1.5     2014-11-22 [1] CRAN (R 3.4.3)
 ##  markdown      0.9     2018-12-07 [1] CRAN (R 3.4.4)
 ##  memoise       1.1.0   2017-04-21 [1] CRAN (R 3.4.4)
+##  mime          0.6     2018-10-05 [1] CRAN (R 3.4.4)
+##  munsell       0.5.0   2018-06-12 [1] CRAN (R 3.4.4)
+##  pillar        1.3.0   2018-07-14 [1] CRAN (R 3.4.4)
 ##  pkgbuild      1.0.2   2018-10-16 [1] CRAN (R 3.4.4)
+##  pkgconfig     2.0.2   2018-08-16 [1] CRAN (R 3.4.4)
 ##  pkgload       1.0.2   2018-10-29 [1] CRAN (R 3.4.4)
+##  plyr          1.8.4   2016-06-08 [1] CRAN (R 3.4.4)
 ##  prettyunits   1.0.2   2015-07-13 [1] CRAN (R 3.4.4)
 ##  processx      3.2.1   2018-12-05 [1] CRAN (R 3.4.4)
 ##  ps            1.2.1   2018-11-06 [1] CRAN (R 3.4.4)
+##  purrr         0.2.5   2018-05-29 [1] CRAN (R 3.4.4)
 ##  R.methodsS3   1.7.1   2016-02-16 [1] CRAN (R 3.4.1)
 ##  R.oo          1.22.0  2018-04-22 [1] CRAN (R 3.4.4)
 ##  R.utils       2.7.0   2018-08-27 [1] CRAN (R 3.4.4)
@@ -394,10 +409,13 @@ load(file = &quot;data/processed_data/all_studies_data.Rdata&quot;)
 ##  remotes       2.0.2   2018-10-30 [1] CRAN (R 3.4.4)
 ##  rlang         0.3.0.1 2018-10-25 [1] CRAN (R 3.4.4)
 ##  rprojroot     1.3-2   2018-01-03 [1] CRAN (R 3.4.4)
+##  scales        1.0.0   2018-08-09 [1] CRAN (R 3.4.4)
 ##  sessioninfo   1.1.1   2018-11-05 [1] CRAN (R 3.4.4)
 ##  stringi       1.2.4   2018-07-20 [1] CRAN (R 3.4.4)
 ##  stringr       1.3.1   2018-05-10 [1] CRAN (R 3.4.4)
 ##  testthat      2.0.1   2018-10-13 [1] CRAN (R 3.4.4)
+##  tibble        1.4.2   2018-01-22 [1] CRAN (R 3.4.4)
+##  tidyselect    0.2.5   2018-10-11 [1] CRAN (R 3.4.4)
 ##  usethis     * 1.4.0   2018-08-14 [1] CRAN (R 3.4.4)
 ##  withr         2.1.2   2018-03-15 [1] CRAN (R 3.4.4)
 ##  xfun          0.4     2018-10-23 [1] CRAN (R 3.4.4)
