script for figure 2 ready for DRUM

--- a/html_reports/03_scores_by_journal_figure.html
+++ b/html_reports/03_scores_by_journal_figure.html
@@ -203,7 +203,7 @@ hr {
 <body>
 <h1>Figure 2</h1>
 
-<p>Description: Scores by journal</p>
+<p>Description: Scores by journal, which is included in Figure 2 in manuscript.</p>
 
 <p>Coder name(s): Althea ArchMiller</p>
 
@@ -217,9 +217,6 @@ hr {
 library(knitr)
 library(devtools)
 library(ggplot2)
-</code></pre>
-
-<pre><code>## Warning: package &#39;ggplot2&#39; was built under R version 3.4.4
 </code></pre>
 
 <p>Clear environment and set seed</p>
